Remove X and Facebook from footer, update webchat link

--- a/themes/xubuntu/layouts/partials/footer.html
+++ b/themes/xubuntu/layouts/partials/footer.html
@@ -23,8 +23,6 @@
          <li><a href="https://matrix.to/#/#xubuntu:ubuntu.com">Matrix</a></li>
       </ul>
       <ul>
-         <li><a href="https://twitter.com/Xubuntu">X</a></li>
-         <li><a href="http://www.facebook.com/xubuntuusers">Facebook</a></li>
          <li><a href="https://floss.social/@xubuntu">Mastodon</a></li>
       </ul>
    </div>
@@ -47,7 +45,7 @@
       <p class="sub">For Developers</p>
       <ul>
          <li><a href="https://github.com/Xubuntu">GitHub</a></li>
-         <li><a href="https://kiwiirc.com/nextclient/irc.libera.chat?nick=xu-contribute?w#xubuntu-devel">IRC</a></li>
+         <li><a href="https://web.libera.chat/?nick=xu-contribute?w#xubuntu-devel">IRC</a></li>
          <li><a href="https://matrix.to/#/#xubuntu-devel:ubuntu.com">Matrix</a></li>
       </ul>
    </div>
