--- a/themes/xubuntu/layouts/tag/term.html
+++ b/themes/xubuntu/layouts/tag/term.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-  <h2>Archive: {{ .Title }}</h2>
+  <h2><a href="/tag">Tags</a>: {{ .Title }}</h2>
   <section>
   {{ range (.Paginate .Pages 20).Pages }}
 
