--- a/themes/xubuntu/layouts/partials/head.html
+++ b/themes/xubuntu/layouts/partials/head.html
@@ -1,5 +1,4 @@
-<!-- TODO: Append – page title -->
-<title>{{ site.Title }}</title>
+<title>{{ .Page.Title }} « {{ site.Title }}</title>
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
