--- a/themes/xubuntu/layouts/press/archive.html
+++ b/themes/xubuntu/layouts/press/archive.html
@@ -6,11 +6,12 @@
   {{ $press := index $output 0}}
   {{ $versionMap := index $output 1}}
 
-  {{ range $press }}
-    {{ $release := .Params.release }}
-    <h4>{{ $release }} ({{ index $versionMap $release }})</h4>
-    {{ .Content }}
+  <section>
+    {{ range $press }}
+      {{ $release := .Params.release }}
+      <h4>{{ $release }} ({{ index $versionMap $release }})</h4>
+      {{ .Content }}
   {{ end }}
-
+  </section>
 
 {{ end }}
