--- a/themes/xubuntu/layouts/partials/head.html
+++ b/themes/xubuntu/layouts/partials/head.html
@@ -1,4 +1,4 @@
-<title>{{ site.Title }} – {{ .page.Title }}</title>
+<title>{{ site.Title }} – {{ .Page.Title }}</title>
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
