Replace kiwiirc.com links with web.libera.chat equivalents (#11)

--- a/themes/xubuntu/layouts/partials/footer.html
+++ b/themes/xubuntu/layouts/partials/footer.html
@@ -19,7 +19,7 @@
       <span class="icon"><img src="{{ $communicate.Permalink }}" alt="Communicate" /></span>
       <p class="sub">Communicate</p>
       <ul>
-         <li><a href="https://kiwiirc.com/nextclient/irc.libera.chat?nick=xu-user?w#xubuntu">IRC</a></li>
+         <li><a href="https://web.libera.chat/?nick=xu-user?w#xubuntu">IRC</a></li>
          <li><a href="https://matrix.to/#/#xubuntu:ubuntu.com">Matrix</a></li>
       </ul>
       <ul>
