Add RSS feed to <head> (fixes #3)

--- a/themes/xubuntu/layouts/partials/head.html
+++ b/themes/xubuntu/layouts/partials/head.html
@@ -11,5 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="{{ "favicon.ico" | relURL }}">
 
+<link rel="alternate" type="application/rss+xml" title="Xubuntu News Feed" href="{{ "news/index.xml" | relURL }}" />
+
 {{ partialCached "head/css.html" . }}
 {{ partialCached "head/js.html" . }}
