Only show one download per type (LTS, normal) on the download page

--- a/themes/xubuntu/layouts/shortcodes/release-downloads-supported.html
+++ b/themes/xubuntu/layouts/shortcodes/release-downloads-supported.html
@@ -1,6 +1,8 @@
-{{ $releases := partialCached "releases-supported.html" . }}
+{{ $releases := partialCached "releases-supported-one-per-type.html" . }}
 {{ range $releases }}
-   <h3>{{ .Title }}</h3>
-   <p>For more information about the release, including release announcement, see the <a href="{{ .RelPermalink }}">release page</a>.</p>
-   {{ partial "release-downloads.html" . }}
+   <section class="wide release">
+      <h3>{{ .Title }}</h3>
+      <p>For more information about the release, including release announcement, see the <a href="{{ .RelPermalink }}">release page</a>.</p>
+      {{ partial "release-downloads.html" . }}
+   </section>
 {{ end }}
