--- a/themes/xubuntu/assets/css/main.css
+++ b/themes/xubuntu/assets/css/main.css
@@ -559,6 +559,7 @@ section.alternative-bg {
    }
 
 /*  Columned list  */
+
 .columned-list {
    column-gap: 1em;
 }
@@ -649,6 +650,21 @@ section.alternative-bg {
          box-shadow: 0 0 2em var(--color-button-glow);
       }
 
+/*  Release  */
+
+.release {
+   margin: 2em 0;
+}
+   .release:nth-child(odd) {
+      padding: var(--pad) 0;
+      background-color: var(--color-bg-alternative-2);
+   }
+      .release:nth-child(odd) > :first-child {
+         margin-top: 0;
+      }
+      .release:nth-child(odd) > :last-child {
+         margin-bottom: 0;
+      }
 /*
  *
  *
