Add CSS variable --color-bg-alternative-2 (used in download page)

--- a/themes/xubuntu/assets/css/main.css
+++ b/themes/xubuntu/assets/css/main.css
@@ -8,6 +8,7 @@
 
    --color-bg: #fff;
    --color-bg-alternative: #f0f2f5;
+   --color-bg-alternative-2: #f5f7fa;
 
    --color-fg-footer: #fff;
    --color-bg-footer: #849cbd;
