Add missing CSS variable --color-bg-alternative-2 in dark mode (fixes #15)

--- a/themes/xubuntu/assets/css/main.css
+++ b/themes/xubuntu/assets/css/main.css
@@ -40,6 +40,7 @@
 
       --color-bg: #111c2b;
       --color-bg-alternative: #222b38;
+      --color-bg-alternative-2: #1f2733;
       --color-bg-footer: #162333;
 
       --color-gradient-first: #052940;
